# anatolia-sim

./: .env.example  .gitignore  AGENTS.md  ANALYSIS.md  CLAUDE.md  CLAUDE_BRIEFING.md  Dockerfile  LICENSE.txt  README.md  fly.toml  koyeb.yaml  nixpacks.toml  package-lock.json  package.json  railway.json  render.yaml
.github/workflows/: build-desktop.yml  release.yml  test.yml
client/: index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.json  vite.config.ts
client/public/: manifest.json
client/src/: App.tsx  index.css  main.tsx
desktop/: bundled-config.json  inject-config.mjs  loading.html  main.mjs  mode-select.html  package-portable.mjs  preload.cjs  preload.mjs  setup.html
desktop/src-tauri/: Cargo.toml  tauri.conf.json
desktop/src-tauri/src/: main.rs
rust/: Cargo.toml
rust/scripts/: build.cmd  check.cmd  serve.cmd  test.cmd
rust/sim-core/: Cargo.toml
rust/sim-core/src/: agent.rs  architecture.rs  art.rs  astronomy.rs  belief.rs  consciousness.rs  culture.rs  economy.rs  environment.rs  epigenetics.rs  language.rs  law.rs  lib.rs  microbiome.rs  psychology.rs  social.rs  spatial.rs  state.rs  technology.rs  tick.rs
rust/sim-core/src/biology/: genome.rs  individual.rs  mod.rs  mortality.rs  reproduction.rs
rust/sim-core/tests/: simulation_lifecycle.rs
rust/sim-server/: Cargo.toml
rust/sim-server/src/: admin.rs  analysis.rs  aria.rs  auth.rs  db.rs  god.rs  main.rs  routes.rs  runtime.rs  ws.rs
scripts/: sync-version.mjs
server/: .env.example  package-lock.json  package.json  sim_speedtest.mjs
server/src/: cleanup.js  index.js
server/tests/: activityEngine.test.js  art.test.js  (+26 more)
(+95 files in other folders)
