[package]
name = "sim-core"
version = "0.1.0"
edition = "2021"

[lib]
name = "sim_core"
path = "src/lib.rs"

[[bin]]
name = "sim-core-cli"
path = "src/bin/sim-core-cli.rs"

[dependencies]
rand = "0.8"
rayon = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["serde", "v4"] }
