[package]
name = "sim-server"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.7", features = ["ws", "json"] }
bcrypt = "0.15"
futures-util = "0.3"
jsonwebtoken = "9"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sim-core = { path = "../sim-core" }
sqlx = { version = "0.8", features = ["postgres", "sqlite", "runtime-tokio-rustls", "macros", "json", "uuid"] }
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.6", features = ["cors", "fs"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
dotenvy = "0.15"
base64 = "0.22"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4", "serde"] }

[dev-dependencies]
tempfile = "3"
tower = { version = "0.5", features = ["util"] }
